--- a/app/src/main/res/layout/activity_grocery_list.xml
+++ b/app/src/main/res/layout/activity_grocery_list.xml
@@ -48,6 +48,7 @@
                     android:layout_marginTop="5dp"
                     android:fontFamily="serif"
                     android:text="ingredients"
+                    android:textColor="@color/black"
                     android:textSize="20sp" />
             </LinearLayout>
 
