--- a/app/src/main/res/layout/activity_main_recipes.xml
+++ b/app/src/main/res/layout/activity_main_recipes.xml
@@ -41,14 +41,17 @@
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchView"
-                android:layout_width="410dp"
-                android:layout_height="44dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginEnd="1dp"
                 android:layout_marginBottom="2dp"
+                app:defaultQueryHint="search for recipe"
                 app:layout_constraintBottom_toTopOf="@+id/grid_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.SearchView>
+                app:layout_constraintTop_toTopOf="parent"
+                app:searchHintIcon="@drawable/search_icon_removebg_preview"></androidx.appcompat.widget.SearchView>
+
 
             <TextView
                 android:id="@+id/textView15"
@@ -63,8 +66,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleRecipeBest"
-                android:layout_width="404dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 android:scrollbars="horizontal"
@@ -83,8 +86,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleRecipeBreakfastLaunch"
-                android:layout_width="409dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:scrollbars="horizontal">
 
