--- a/app/src/main/res/layout/ingredients_recycle_recipe.xml
+++ b/app/src/main/res/layout/ingredients_recycle_recipe.xml
@@ -7,9 +7,11 @@
 
     <EditText
         android:id="@+id/amount"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,34 +22,38 @@
         app:layout_constraintVertical_bias="0.62" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="wrap_content"
+        android:id="@+id/nameIngred"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="200dp"
+        android:layout_marginEnd="210dp"
+        android:background="@drawable/border_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/nameIngred"
-            android:layout_width="150dp"
+            android:id="@+id/nameIngred1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
         android:id="@+id/unit"
-        android:layout_width="50dp"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.242"
-        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
+        app:layout_constraintStart_toEndOf="@+id/nameIngred"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.507" />
 
@@ -57,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="220dp"
         android:text="amount"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/amount"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,8 +78,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="200dp"
         android:text="name"
+        android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/nameIngred"
+        app:layout_constraintBottom_toTopOf="@+id/nameIngred1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -81,9 +89,11 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:text="unit"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/unit"
         app:layout_constraintEnd_toStartOf="@+id/textView8"
