--- a/app/src/main/res/layout/ingredients_recycle_recipe.xml
+++ b/app/src/main/res/layout/ingredients_recycle_recipe.xml
@@ -8,12 +8,11 @@
     <EditText
         android:id="@+id/amount"
         android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="50dp"
         android:background="@drawable/border_text"
         android:ems="10"
         android:inputType="number"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.29"
@@ -26,6 +25,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="210dp"
         android:background="@drawable/border_text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,19 +37,20 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameIngred1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
         android:id="@+id/unit"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/border_text"
         android:ems="10"
         android:inputType="text"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.242"
@@ -61,7 +62,8 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="220dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="5dp"
         android:text="amount"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -89,7 +91,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:text="unit"
